Update Java Docs with added test classes