@@ -7,6 +7,9 @@ import com.axon.service.api.PromptService;
 import com.axon.service.api.TutorialStateService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.NoSuchBeanDefinitionException;
 import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Service;
 
@@ -19,16 +22,36 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
+/**
+ * Implementation of {@link TutorialStateService} that manages the user's learning session.
+ * <p>
+ * This service handles state persistence (via a local JSON file), orchestrates the
+ * generation of content via the {@link AiTutorService}, and manages the navigation
+ * pointer (current lesson index).
+ * </p>
+ */
 @Service
 public class TutorialStateServiceImpl implements TutorialStateService {
 
+    private static final Logger log = LoggerFactory.getLogger(TutorialStateServiceImpl.class);
+
+    // Constants for configuration
+    private static final String PROGRESS_FILENAME = ".axon-progress.json";
+    private static final int MAX_TOKENS_MODULE = 5000;
+    private static final int MAX_TOKENS_EXTENSION = 4000;
+    private static final int MAX_TOKENS_SUMMARY = 2500;
+    private static final Path PROGRESS_PATH = Path.of(System.getProperty("user.home"), PROGRESS_FILENAME);
+
+    /**
+     * DTO for persisting the user's current location in the curriculum.
+     */
     public record Progress(String currentTechnology, String currentModuleKey, int currentLessonIndex) {}
-    private static final Path PROGRESS_FILE = Path.of(System.getProperty("user.home"), ".axon-progress.json");
 
     private final ObjectMapper objectMapper;
     private final AiTutorService aiTutorService;
     private final ApplicationContext context;
 
+    // Mutable state
     private LearningModule currentModule;
     private Progress currentProgress;
     private PromptService currentPromptService;
@@ -39,34 +62,57 @@ public class TutorialStateServiceImpl implements TutorialStateService {
         this.context = context;
     }
 
+    /**
+     * Attempt to resume the previous session on application startup.
+     * <p>
+     * It reads the local progress file and attempts to re-generate the module content
+     * from the AI. If the AI service is unreachable, it logs a warning and starts with a clean state.
+     * </p>
+     */
     @PostConstruct
     public void loadProgress() {
-        if (Files.exists(PROGRESS_FILE)) {
-            try {
-                this.currentProgress = objectMapper.readValue(PROGRESS_FILE.toFile(), Progress.class);
-                if (this.currentProgress != null) {
-                    System.out.println("Resuming previous session for " + currentProgress.currentTechnology() + "...");
-                    this.currentPromptService = getPromptServiceFor(currentProgress.currentTechnology());
-                    String prompt = currentPromptService.buildInitialModulePrompt(currentProgress.currentModuleKey());
-                    // Increased tokens to accommodate new fields for practice mode
-                    this.currentModule = aiTutorService.generateModuleFromPrompt(prompt, 5000);
-                }
-            } catch (IOException e) {
-                System.err.println("Warning: Could not load progress file. " + e.getMessage());
-                this.currentProgress = null;
+        if (!Files.exists(PROGRESS_PATH)) {
+            return;
+        }
+
+        try {
+            log.info("Loading progress from {}", PROGRESS_PATH);
+            var savedProgress = objectMapper.readValue(PROGRESS_PATH.toFile(), Progress.class);
+
+            if (savedProgress != null) {
+                log.info("Resuming previous session for {}...", savedProgress.currentTechnology());
+
+                // Restore state
+                this.currentPromptService = getPromptServiceFor(savedProgress.currentTechnology());
+                var prompt = currentPromptService.buildInitialModulePrompt(savedProgress.currentModuleKey());
+
+                // Regenerate content
+                this.currentModule = aiTutorService.generateModuleFromPrompt(prompt, MAX_TOKENS_MODULE);
+                this.currentProgress = savedProgress;
             }
+        } catch (Exception e) {
+            log.error("Failed to resume session. Starting fresh. Error: {}", e.getMessage());
+            // Reset state on failure to ensure app remains usable
+            this.currentProgress = null;
+            this.currentModule = null;
+            this.currentPromptService = null;
         }
     }
 
     @Override
     public void startModule(String technology, String moduleKey) {
+        log.info("Starting new module: Technology={}, Key={}", technology, moduleKey);
+
         this.currentPromptService = getPromptServiceFor(technology);
+
         if (!currentPromptService.getAvailableModules().containsKey(moduleKey)) {
             throw new IllegalArgumentException("Unknown module key '" + moduleKey + "' for " + technology);
         }
-        String prompt = currentPromptService.buildInitialModulePrompt(moduleKey);
-        // Increased tokens to accommodate new fields for practice mode
-        this.currentModule = aiTutorService.generateModuleFromPrompt(prompt, 5000);
+
+        var prompt = currentPromptService.buildInitialModulePrompt(moduleKey);
+        this.currentModule = aiTutorService.generateModuleFromPrompt(prompt, MAX_TOKENS_MODULE);
+
+        // Initialize progress at lesson 0
         this.currentProgress = new Progress(technology, moduleKey, 0);
         saveProgress();
     }
@@ -74,6 +120,10 @@ public class TutorialStateServiceImpl implements TutorialStateService {
     @Override
     public Optional<Lesson> getCurrentLesson() {
         if (currentModule == null || currentProgress == null || isModuleComplete()) {
+            return Optional.empty();
+        }
+        // Safety check for index out of bounds
+        if (currentProgress.currentLessonIndex() >= currentModule.lessons().size()) {
             return Optional.empty();
         }
         return Optional.of(currentModule.lessons().get(currentProgress.currentLessonIndex()));
@@ -84,7 +134,15 @@ public class TutorialStateServiceImpl implements TutorialStateService {
         if (currentModule == null || isModuleComplete()) {
             return Optional.empty();
         }
-        currentProgress = new Progress(currentProgress.currentTechnology(), currentProgress.currentModuleKey(), currentProgress.currentLessonIndex() + 1);
+
+        // Advance index
+        int nextIndex = currentProgress.currentLessonIndex() + 1;
+        this.currentProgress = new Progress(
+                currentProgress.currentTechnology(),
+                currentProgress.currentModuleKey(),
+                nextIndex
+        );
+
         saveProgress();
         return getCurrentLesson();
     }
@@ -94,15 +152,18 @@ public class TutorialStateServiceImpl implements TutorialStateService {
         if (currentProgress == null || currentPromptService == null) {
             return "No tutorial in progress. Use 'start' to begin.";
         }
+
+        String techName = currentPromptService.getTechnologyName();
+        String moduleName = currentProgress.currentModuleKey();
+        int totalLessons = currentModule.lessons().size();
+
         if (isModuleComplete()) {
-            return String.format("You have completed all %d lessons of the '%s' module for %s!",
-                    currentModule.lessons().size(), currentProgress.currentModuleKey(), currentPromptService.getTechnologyName());
+            return "You have completed all %d lessons of the '%s' module for %s!".formatted(
+                    totalLessons, moduleName, techName);
         }
-        return String.format("Technology: %s | Module: '%s' | Lesson %d of %d.",
-                currentPromptService.getTechnologyName(),
-                currentProgress.currentModuleKey(),
-                currentProgress.currentLessonIndex() + 1,
-                currentModule.lessons().size());
+
+        return "Technology: %s | Module: '%s' | Lesson %d of %d.".formatted(
+                techName, moduleName, currentProgress.currentLessonIndex() + 1, totalLessons);
     }
 
     @Override
@@ -115,14 +176,26 @@ public class TutorialStateServiceImpl implements TutorialStateService {
 
     @Override
     public void appendMoreLessons() {
-        if (!isModuleComplete()) throw new IllegalStateException("Finish current lessons first.");
-        if (currentModule == null) throw new IllegalStateException("No active module.");
+        if (!isModuleComplete()) {
+            throw new IllegalStateException("Finish current lessons first.");
+        }
+        if (currentModule == null) {
+            throw new IllegalStateException("No active module.");
+        }
 
-        String prompt = currentPromptService.buildMoreLessonsPrompt(currentProgress.currentModuleKey(), currentModule.lessons());
-        LearningModule newLessonsModule = aiTutorService.generateModuleFromPrompt(prompt, 4000);
+        log.info("Generating extension lessons for {}", currentProgress.currentModuleKey());
 
+        var prompt = currentPromptService.buildMoreLessonsPrompt(
+                currentProgress.currentModuleKey(),
+                currentModule.lessons()
+        );
+
+        var newLessonsModule = aiTutorService.generateModuleFromPrompt(prompt, MAX_TOKENS_EXTENSION);
+
+        // Merge existing lessons with new ones
         List<Lesson> combinedLessons = new ArrayList<>(currentModule.lessons());
         combinedLessons.addAll(newLessonsModule.lessons());
+
         this.currentModule = new LearningModule(currentModule.moduleName(), combinedLessons);
         saveProgress();
     }
@@ -132,8 +205,8 @@ public class TutorialStateServiceImpl implements TutorialStateService {
         if (currentPromptService == null) {
             throw new IllegalStateException("Cannot answer question without context. Please start a module first.");
         }
-        String prompt = currentPromptService.buildQuestionPrompt(question);
-        return aiTutorService.answerQuestionFromPrompt(prompt, 2500);
+        var prompt = currentPromptService.buildQuestionPrompt(question);
+        return aiTutorService.answerQuestionFromPrompt(prompt, MAX_TOKENS_SUMMARY);
     }
 
     @Override
@@ -149,18 +222,33 @@ public class TutorialStateServiceImpl implements TutorialStateService {
         if (currentProgress == null || currentProgress.currentLessonIndex() <= 0) {
             return Optional.empty();
         }
-        this.currentProgress = new Progress(currentProgress.currentTechnology(), currentProgress.currentModuleKey(), currentProgress.currentLessonIndex() - 1);
+
+        int prevIndex = currentProgress.currentLessonIndex() - 1;
+        this.currentProgress = new Progress(
+                currentProgress.currentTechnology(),
+                currentProgress.currentModuleKey(),
+                prevIndex
+        );
+
         saveProgress();
         return getCurrentLesson();
     }
 
     @Override
     public Optional<Lesson> goToLesson(int lessonNumber) {
-        int lessonIndex = lessonNumber - 1;
-        if (currentModule == null || lessonIndex < 0 || lessonIndex >= currentModule.lessons().size()) {
+        // Convert 1-based CLI input to 0-based index
+        int targetIndex = lessonNumber - 1;
+
+        if (currentModule == null || targetIndex < 0 || targetIndex >= currentModule.lessons().size()) {
             return Optional.empty();
         }
-        this.currentProgress = new Progress(currentProgress.currentTechnology(), currentProgress.currentModuleKey(), lessonIndex);
+
+        this.currentProgress = new Progress(
+                currentProgress.currentTechnology(),
+                currentProgress.currentModuleKey(),
+                targetIndex
+        );
+
         saveProgress();
         return getCurrentLesson();
     }
@@ -179,23 +267,39 @@ public class TutorialStateServiceImpl implements TutorialStateService {
             throw new IllegalStateException("No active module to summarize.");
         }
 
+        log.info("Generating summary for module: {}", currentProgress.currentModuleKey());
+
         String moduleName = currentPromptService.getAvailableModules().get(currentProgress.currentModuleKey());
         String prompt = currentPromptService.buildSummaryPrompt(moduleName, currentModule.lessons());
 
-        System.out.println("Generating AI summary of the module... please wait.");
-        return aiTutorService.answerQuestionFromPrompt(prompt, 2500);
+        return aiTutorService.answerQuestionFromPrompt(prompt, MAX_TOKENS_SUMMARY);
     }
 
+    /**
+     * Persists the current progress state to the local filesystem.
+     */
     private void saveProgress() {
         try {
-            objectMapper.writeValue(PROGRESS_FILE.toFile(), currentProgress);
+            objectMapper.writeValue(PROGRESS_PATH.toFile(), currentProgress);
         } catch (IOException e) {
-            System.err.println("Warning: Could not save progress: " + e.getMessage());
+            log.error("Failed to save progress to file: {}", e.getMessage());
         }
     }
 
+    /**
+     * Dynamically retrieves the correct {@link PromptService} bean based on the technology name.
+     *
+     * @param technology The technology identifier (e.g., "git", "docker").
+     * @return The specific PromptService implementation.
+     * @throws IllegalArgumentException If no service bean exists for the given technology.
+     */
     private PromptService getPromptServiceFor(String technology) {
         String beanName = technology.toLowerCase() + "PromptService";
-        return context.getBean(beanName, PromptService.class);
+        try {
+            return context.getBean(beanName, PromptService.class);
+        } catch (NoSuchBeanDefinitionException e) {
+            log.error("Service lookup failed for technology: {}", technology);
+            throw new IllegalArgumentException("Technology '" + technology + "' is not supported.");
+        }
     }
 }
